# dns

./: .gitignore  .golangci.toml  Cargo.toml  Makefile  README.md  TODO.md  config.json  go.mod  go.sum  main.go  rustfmt.toml  test_config.json  todo.md
.github/workflows/: ci.yaml
Formula/: godns.rb
aur/: PKGBUILD  config.json  config.json.example  godns.service  golang-dns.service
client/: block.go  cache.go  doh.go  ipv4.go  ipv6.go  main.go  router.go  static.go  udp.go
cmd/godns/: main.go
config/: main.go  validator.go
internal/client/: doh.go  error.go  ipv4.go  ipv6.go  main.go  udp.go
internal/config/: main.go  validator.go
internal/server/: args.go  cache.go  handler.go  main.go  router.go
internal/util/: china_list.go
server/: args.go  cache.go  handler.go  main.go  router.go
src/: async_dns_resolver.rs  async_resolver_wrapper.rs  cli.rs  config.rs  dns_handler.rs  dns_router.rs  log_level.rs  main.rs  proxy_runtime.rs
util/: china_list.go  deferred.go
